tests/cases/compiler-development/artifact/errors/diagnostic-duplicate-name.diagnostic
diagnostic error code=T0001 family=type message="duplicate struct 'DuplicatePoint'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-duplicate-name.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-duplicate-name.ari" bytes=107
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-duplicate-name.ari" line=5 column=8 end_line=5 end_column=22 byte_start=44 byte_end=58 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-duplicate-name.ari:5:8\n   |\n 5 | struct DuplicatePoint {\n   |        ^^^^^^^^^^^^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-duplicate-name.ari" line=1 column=8 end_line=1 end_column=22 byte_start=7 byte_end=21 message="previous declaration of struct 'DuplicatePoint'"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-duplicate-name.ari:1:8\n   |\n 1 | struct DuplicatePoint {\n   |        ^^^^^^^^^^^^^^"
  Note index=0 location=none message="previous declaration is shown as a secondary label"
  Help index=0 location=none message="rename or remove one of the struct declarations"
